--- a/.github/workflows/sample-1.yml
+++ b/.github/workflows/sample-1.yml
@@ -8,6 +8,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: |
-          echo Gotcha issue $NUMBER
+          echo Gotcha issue $name
         env:
-          NUMBER: ${{ github.event.issue.number }}
+          name: ${{ github.event.issue.labels.name }}
