--- a/.github/workflows/sample-1.yml
+++ b/.github/workflows/sample-1.yml
@@ -10,4 +10,4 @@ jobs:
       - run: |
           echo Gotcha issue $LABELS
         env:
-          LABELS: ${{ github.event.issue.labels }}
+          LABELS: ${{ github.event.issue.labels.name }}
