--- a/.github/workflows/sample-1.yml
+++ b/.github/workflows/sample-1.yml
@@ -20,8 +20,11 @@ jobs:
           echo "secret : API_KEY : $API_KEY"
           echo "secret : ARGILLA_WORKSPACE : $ARGILLA_WORKSPACE"
           echo "secret : VISHNURAMOV_PUSH_TO_HF_HUB_TOKEN : $VISHNURAMOV_PUSH_TO_HF_HUB_TOKEN"
+          python ${{ env.SCRIPTS_DIR }}/hello_world.py
+          shell: sh
         env:
           API_URL: ${{ vars.API_URL }}
           API_KEY: ${{ secrets.API_KEY }}
           ARGILLA_WORKSPACE: ${{ secrets.ARGILLA_WORKSPACE }}
           VISHNURAMOV_PUSH_TO_HF_HUB_TOKEN: ${{ secrets.VISHNURAMOV_PUSH_TO_HF_HUB_TOKEN }}
+          SCRIPTS_DIR: ${{ vars.SCRIPTS_DIR }}
