--- a/.github/workflows/sample-1.yml
+++ b/.github/workflows/sample-1.yml
@@ -20,7 +20,7 @@ jobs:
           echo "secret : API_KEY : $API_KEY"
           echo "secret : ARGILLA_WORKSPACE : $ARGILLA_WORKSPACE"
           echo "secret : VISHNURAMOV_PUSH_TO_HF_HUB_TOKEN : $VISHNURAMOV_PUSH_TO_HF_HUB_TOKEN"
-          python ${{ env.SCRIPTS_DIR }}/hello_world.py
+          python ${{ env.SCRIPTS_DIR }}/PushRecordToArgilla-HF.py
           shell: sh
         env:
           API_URL: ${{ vars.API_URL }}
