--- a/.github/workflows/sample-1.yml
+++ b/.github/workflows/sample-1.yml
@@ -25,11 +25,11 @@ jobs:
           echo "secret : API_KEY : $API_KEY"
           echo "secret : ARGILLA_WORKSPACE : $ARGILLA_WORKSPACE"
           echo "secret : VISHNURAMOV_PUSH_TO_HF_HUB_TOKEN : $VISHNURAMOV_PUSH_TO_HF_HUB_TOKEN"
-          python ${{ env.SCRIPTS_DIR }}/PushRecordToArgilla-HF.py
+          python $MY_SCRIPTS_DIR/PushRecordToArgilla-HF.py
           shell: sh
           env:
             API_URL: ${{ vars.API_URL }}
             API_KEY: ${{ secrets.API_KEY }}
             ARGILLA_WORKSPACE: ${{ secrets.ARGILLA_WORKSPACE }}
             VISHNURAMOV_PUSH_TO_HF_HUB_TOKEN: ${{ secrets.VISHNURAMOV_PUSH_TO_HF_HUB_TOKEN }}
-            SCRIPTS_DIR: ${{ vars.SCRIPTS_DIR }}
+            MY_SCRIPTS_DIR: ${{ vars.SCRIPTS_DIR }}
