--- a/.github/workflows/sample-1.yml
+++ b/.github/workflows/sample-1.yml
@@ -19,18 +19,18 @@ jobs:
             repository: vrra/FGAN-Build-a-thon
             token: ${{ secrets.MY_GITHUB_TOKEN }}
 
-      - name: push record to argilla
+      - name: print env vars
         run: |
           echo "repository variable : $API_URL"
           echo "secret : API_KEY : $API_KEY"
           echo "secret : ARGILLA_WORKSPACE : $ARGILLA_WORKSPACE"
           echo "secret : VISHNURAMOV_PUSH_TO_HF_HUB_TOKEN : $VISHNURAMOV_PUSH_TO_HF_HUB_TOKEN"
-          
-          env:
+        env:
             API_URL: ${{ vars.API_URL }}
             API_KEY: ${{ secrets.API_KEY }}
             ARGILLA_WORKSPACE: ${{ secrets.ARGILLA_WORKSPACE }}
             VISHNURAMOV_PUSH_TO_HF_HUB_TOKEN: ${{ secrets.VISHNURAMOV_PUSH_TO_HF_HUB_TOKEN }}
 
-          python ${{ vars.SCRIPTS_DIR }}/PushRecordToArgilla-HF.py
-          shell: sh
+      - name: push record to argilla
+        run: python ${{ vars.SCRIPTS_DIR }}/PushRecordToArgilla-HF.py
+        shell: sh
