--- a/.github/workflows/sample-1.yml
+++ b/.github/workflows/sample-1.yml
@@ -24,6 +24,6 @@ jobs:
         shell: sh
         env:
             API_URL: ${{ vars.API_URL }}
-            API_KEY: ${{ secrets.API_KEY }}
-            ARGILLA_WORKSPACE: ${{ secrets.ARGILLA_WORKSPACE }}
-            VISHNURAMOV_PUSH_TO_HF_HUB_TOKEN: ${{ secrets.VISHNURAMOV_PUSH_TO_HF_HUB_TOKEN }}        
+            API_KEY: ${{ vars.API_KEY }}
+            ARGILLA_WORKSPACE: ${{ vars.ARGILLA_WORKSPACE }}
+            VISHNURAMOV_PUSH_TO_HF_HUB_TOKEN: ${{ vars.VISHNURAMOV_PUSH_TO_HF_HUB_TOKEN }}        
