--- a/.github/workflows/sample-1.yml
+++ b/.github/workflows/sample-1.yml
@@ -32,4 +32,5 @@ jobs:
             API_URL: ${{ vars.API_URL }}
             API_KEY: ${{ vars.API_KEY }}
             ARGILLA_WORKSPACE: ${{ vars.ARGILLA_WORKSPACE }}
-            VISHNURAMOV_PUSH_TO_HF_HUB_TOKEN: ${{ vars.VISHNURAMOV_PUSH_TO_HF_HUB_TOKEN }}        
+            VISHNURAMOV_PUSH_TO_HF_HUB_TOKEN: ${{ vars.VISHNURAMOV_PUSH_TO_HF_HUB_TOKEN }}      
+            SCRIPTS_DIR: ${{ vars.SCRIPTS_DIR }  
