--- a/.github/workflows/sample-1.yml
+++ b/.github/workflows/sample-1.yml
@@ -26,7 +26,10 @@ jobs:
           GITHUB_CONTEXT: ${{ toJson(github) }}
 
       - name: Push to Argilla
-        run: python ${{ vars.SCRIPTS_DIR }}/PushRecordToArgilla-HF.py
+        run: |
+          python -m pip install --upgrade pip
+          pip install argilla
+          python ${{ vars.SCRIPTS_DIR }}/PushRecordToArgilla-HF.py
         env:
             API_URL: ${{ vars.API_URL }}
             API_KEY: ${{ vars.API_KEY }}
