--- a/.github/workflows/sample-1.yml
+++ b/.github/workflows/sample-1.yml
@@ -29,10 +29,13 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install argilla
+          pip install huggingface_hub
           python ${{ vars.SCRIPTS_DIR }}/PushRecordToArgilla-HF.py
         env:
             API_URL: ${{ vars.API_URL }}
             API_KEY: ${{ vars.API_KEY }}
             ARGILLA_WORKSPACE: ${{ vars.ARGILLA_WORKSPACE }}
-            VISHNURAMOV_PUSH_TO_HF_HUB_TOKEN: ${{ vars.VISHNURAMOV_PUSH_TO_HF_HUB_TOKEN }}      
+            MY_PUSH_TO_HF_HUB_TOKEN: ${{ vars.MY_PUSH_TO_HF_HUB_TOKEN }}      
             SCRIPTS_DIR: ${{ vars.SCRIPTS_DIR }}  
+            DB_NAME: ${{ vars.DB_NAME }} 
+            HF_HUB_NAME: ${{ vars.HF_HUB_NAME }}
